@startuml utilizing

' ── Generic infrastructure ───────────────────────────────────

class GenericSingleton {
  ~ {static} _instance: Self
  ~ {static} _lock: Lock
  --
  + {static} get_instance(): Self
  ~ {static} _reset_instance(): None
}

class GenericRegistry <T> {
  ~ _canonical: dict
  ~ _alias_to_canonical: dict
  ~ _canonical_to_aliases: dict
  --
  + register(key: str, value: T, on_duplicate: str): None
  + register_alias(canonical_key: str, alias: str, on_duplicate: str): None
  + get(key: str, default: T): T
  + contains(key: str): bool
  + remove(key: str): None
  + remove_alias(alias: str): None
  + canonical_keys(): list
  + all_keys(): list
  + aliases_of(canonical_key: str): list
  + values(): list
  + items(): list
}

' ── Color ────────────────────────────────────────────────────

class Color <<frozen>> {
  + r: float
  + g: float
  + b: float
  + a: float
  --
  + {static} from_name(name: str): Color
  + {static} from_hex(hex_str: str): Color
  + {static} from_rgb(r, g, b, a): Color
  + to_hex(): str
  + to_rgba_tuple(): tuple
  + with_alpha(a: float): Color
}

class ColorRegistry {
  --
  + register_color(name: str, color: Color, on_duplicate: str): None
  + get_color(name: str, default: Color): Color
}

class SingletonColorRegistry {
}

ColorRegistry --|> GenericRegistry
SingletonColorRegistry --|> ColorRegistry
SingletonColorRegistry --|> GenericSingleton
ColorRegistry --> Color
Color ..> SingletonColorRegistry : from_name() delegates to

' ── Temporal ─────────────────────────────────────────────────

class Date <<frozen>> {
  + value: date
  --
  + {static} from_string(s: str): Date
  + {static} today(): Date
  + {static} tomorrow(): Date
  + to_iso(): str
  + to_long(): str
  + year(): int
  + month(): int
  + day(): int
}

class Time <<frozen>> {
  + value: time
  --
  + {static} from_string(s: str): Time
  + {static} now(): Time
  + to_hhmm(): str
  + to_hhmmss(): str
  + hour(): int
  + minute(): int
  + second(): int
}

class Duration <<frozen>> {
  + value: timedelta
  --
  + {static} from_string(s: str): Duration
  + {static} zero(): Duration
  + to_minutes(): int
  + to_hours(): float
  + to_days(): float
}

Date --> Duration : __add__ / __sub__
Time --> Duration : __add__ / __sub__
Duration --> Duration : __add__ / __sub__ / __mul__

@enduml
